--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
@@ -52,7 +52,7 @@ jobs:
           # Builds and pushes an image up to your Azure Container Registry
       - name: Build and push image to ACR
         run: |
-          docker buildx build . --push \
+          docker build . --push \
           -t ${{env.AZURE_CONTAINER_REGISTRY}}.azurecr.io/pythonapp:latest \
           -f Dockerfile \
           || (echo "::error::Unable to build and push docker image" && exit 1)
@@ -97,7 +97,6 @@ jobs:
           dns-name-label: podcastgpt
           image: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/pythonapp:latest
           memory: 11
-          restart policy: "OnFailure"
           registry-username: danielfastapi
           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
           name: ${{ env.CONTAINER_INSTANCE_NAME }}
