'Removed Azure Database Code'

--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -98,6 +98,6 @@ jobs:
           memory: 11
           registry-username: danielfastapi
           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-          environment-variables: OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} AZURE_SQL_CONNECTIONSTRING=${{ secrets.AZURE_SQL_CONNECTIONSTRING }}
+          environment-variables: OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
           name: ${{ env.CONTAINER_INSTANCE_NAME }}
           location: "uk south"
